#################
# Package setup #
#################

[metadata]
name = heynotbot
version = 2.2
description = im not bot
long_description = file: README.rst
long_description_content_type = text/x-rst

# URLs
url = https://github.com/umyams/heynotbot
download_url = https://github.com/umyams/heynotbot/releases
project_urls =
  Bug Tracker = https://github.com/umyams/heynotbot/issues

# Author information
author = umyams
author_email = umyamc@gmail.com
maintainer = umyams
maintainer_email = umyamc@gmail.com

# License information
license = BSD-3-Clause
license_file = LICENSE

[options]
install_requires =
  numpy >= 1.19.1
  scipy >= 1.5.2
  pandas >= 1.2.0
  heyreplit >= 0.8

python_requires= >=3.6

# Where is the code
packages = find:
